# cmake_freertos_visualstudio

./: CMakeLists.txt
FreeRTOS/: CMakeLists.txt
FreeRTOS/Source/portable/MSVC-MingW/: supporting_functions.h
googletest/googletest/: CMakeLists.txt
googletest/googletest/src/: gtest_main.cc
gtest/: CMakeLists.txt  freertos_unittest.cpp  gtest_main.cpp  led_control_unittest.cpp  test_freertos.c  test_freertos.h  test_sample1.cpp  test_sample1.h  unittest.cpp
gtest/lib/: gtest_maind.lib
gtest/mock_driver/: LedDriver.cpp  mock-LedDriver.cpp  mock-LedDriver.h
src/: main.c  sample_for_gtest.cpp
src/Supporting_Functions/: supporting_functions.c
test/: CMakeLists.txt  test_freertos.h
user_app/: CMakeLists.txt
user_app/driver/: LedDriver.c
user_app/include/: FreeRTOSConfig.h  led_control.h
user_app/src/: LedDriver.c  led_control.c  main.c
